# learning_fastapi

./: .gitignore  PIPX_POETRY.md  pyproject.toml
learning_fastapi/: app.py
tests/: test_app.py
