[project]
name = "learning-fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "DaviAlencar2",email = "davilt.alencar@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "fastapi[standard] (>=0.135.3,<0.136.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.11,<0.16.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "taskipy (>=1.14.1,<2.0.0)"
]

[tool.ruff]
line-length = 79
extend-exclude = ['**/migrations/**']

[tool.ruff.lint]
preview = true
select = ['I', 'E', 'F', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = "ruff check ."
format = "ruff format"
run = "fastapi dev learning_fastapi/app.py"
test = "pytest -s -x --cov=learning_fastapi -vv"
pre_test = "task lint"

